add style to logout form, and add the form to the rest of pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,19 @@ nav{
     margin: 15px;
 
 }
+.logoutButton{
+    background-color: coral;
+    padding: 5px;
+    border-radius: 5px;
+}
+.logOut{
+    width: 200px;
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    top: 80px;
+    left: 15px;
+}
 
 
 
